# MatlabImGui

./: .clang-format  .gitignore  CMakeLists.txt
AppFramework/: CMakeLists.txt
AppFramework/include/: Application.hpp  IndexBuffer.hpp  Renderer.hpp  Shader.hpp  VertexArray.hpp
AppFramework/src/: Application.cpp  FrameBuffer.cpp  IndexBuffer.cpp  Renderer.cpp  Shader.cpp  VertexArray.cpp  VertexBuffer.cpp  image_helper.cpp
Demo/: CMakeLists.txt  Demo.cpp  Demo.hpp  main.cpp
Demo/resource/shader/: basic.shader  texture.shader
ImGuiApp/: CMakeLists.txt
ImGuiApp/src/: imga.h
ImGuiApp/src/imga/: FrameBuffer.cpp  FrameBuffer.h  ImGuiApp.cpp  ImGuiApp.h  ImageLoader.cpp  ImageLoader.h  IndexBuffer.cpp  IndexBuffer.h  Renderer.cpp  Renderer.h  Shader.cpp  Shader.h  Texture.cpp  Texture.h  VertexArray.cpp  VertexArray.h  VertexBuffer.cpp  VertexBufferLayout.h
MatlabApp/: CMakeLists.txt  MatlabApp.cpp  MatlabApp.h  main_exe.cpp  main_matlab.cpp
myApp/: CMakeLists.txt
myApp/include/: App.hpp  Application.hpp  Demo.hpp  FrameBuffer.hpp  ImGuiUtilities.hpp  Renderer.hpp  Shader.hpp  Texture.hpp  VertexArray.hpp  VertexBuffer.hpp  VertexBufferLayout.hpp  image_helper.h  utilities.hpp
myApp/resource/shader/: triangle.shader  triangle2.glsl
myApp/src/: App.cpp  Application.cpp  Demo.cpp  FrameBuffer.cpp  Renderer.cpp  Shader.cpp  Texture.cpp  VertexBuffer.cpp  main.cpp
testApp/: CMakeLists.txt  main.cpp
